--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+    font-family: "Montserrat", sans-serif;
+}
 body {
     margin-left: 1%;
     margin-right: 1%;
@@ -15,5 +19,70 @@ header {
 }
 
 .logo-header {
-    width: 10%;
+    width: 15%;
+}
+
+.menu ul {
+    display: flex;
+    list-style: none;
+}
+
+.menu li a {
+    color: NavajoWhite (222, 184, 135);
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 20px;
+}
+
+#introducao {
+    display: flex;
+    height: 250px;
+    align-items: center;
+}
+
+#introducao div{
+    width: 50%;
+    padding-right: 100px;
+    padding-left: 100px;
+    margin-top: 50px;
+}
+
+#sobre-nos{
+    padding-left: 100px;
+    padding-right: 100px;
+    background-color:  rgb(224, 161, 115);
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    color: rgb(255, 255, 255);
+}
+#produtos{
+    padding-left: 100px;
+    padding-right: 100px;
+}
+#produtos h2{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+.conteudo-produtos{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 150px;
+}
+.produtos{
+    width: 200px;
+    text-align: center;
+}
+footer{
+    background-color: rgb(224, 161, 115);
+    color: aliceblue;
+    margin: 0%;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.direitos-autorais{
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
