--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-html{
+html {
     scroll-behavior: smooth;
     font-family: "Montserrat", sans-serif;
 }
+
 body {
     margin-left: 1%;
     margin-right: 1%;
@@ -36,45 +37,50 @@ header {
 
 #introducao {
     display: flex;
-    height: 250px;
+    min-height: 250px;
     align-items: center;
 }
 
-#introducao div{
+#introducao div {
     width: 50%;
     padding-right: 100px;
     padding-left: 100px;
     margin-top: 50px;
 }
 
-#sobre-nos{
+#sobre-nos {
     padding-left: 100px;
     padding-right: 100px;
-    background-color:  rgb(224, 161, 115);
-    height: 200px;
+    background-color: rgb(224, 161, 115);
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     color: rgb(255, 255, 255);
 }
-#produtos{
+
+#produtos {
     padding-left: 100px;
     padding-right: 100px;
 }
-#produtos h2{
+
+#produtos h2 {
     margin-top: 100px;
     margin-bottom: 100px;
     text-align: center;
 }
-.conteudo-produtos{
+
+.conteudo-produtos {
     display: flex;
     justify-content: space-between;
     margin-bottom: 150px;
 }
-.produtos{
+
+.produtos {
     width: 200px;
     text-align: center;
 }
-footer{
+
+footer {
     background-color: rgb(224, 161, 115);
     color: aliceblue;
     margin: 0%;
@@ -82,7 +88,50 @@ footer{
     padding-bottom: 25px;
 }
 
-.direitos-autorais{
+.direitos-autorais {
     padding-top: 25px;
     padding-bottom: 25px;
+}
+
+@media (max-width: 875px) {
+
+    #introducao {
+
+        flex-direction: column;
+        text-align: center;
+    }
+     
+    #introducao div{
+        padding-right: 0%;
+        padding-left: 0%;
+        width: 80%;
+    }
+
+    header{
+        padding: 0%;
+        flex-direction: column;
+    }
+
+    .logo-header{
+        width: 300px;
+    }
+
+    .conteudo-produtos{
+        flex-direction: column;
+        align-items: center;
+    }
+    #produtos{
+        padding-left: 0%;
+        padding-right: 0%;
+    }
+    .menu ul{
+        padding-left: 0%;
+        margin: auto;
+    }
+    .produtos{
+        width: 80%;
+    }
+    #sobre-nos{
+        text-align: center;
+    }
 }
